# eyes.sdk.python

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.rst  all_tests_report.sh  extractChangeLog.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  sendMail.sh  setup.cfg  tasks.py  tox.ini
.github/workflows/: bump_version.yml  pre-commit.yml  publish.yaml  py-publish.yaml  py-tests.yaml  tests.yaml  tests.yml  unit-tests.yml
ci_scripts/: all_tests_report.sh  extract_changelog.sh  send_mail.sh
coverage-tests/: .gitignore  coverage-tests.js  emitter.js  overrides.js  package-lock.json  package.json  parser.js  python_requirements.txt  python_tests.sh  util.js
coverage-tests/configuration/: eg_configuration.js  enable.js  index.js  overrides.js  python_overrides_universal.js
coverage-tests/mapping/: deviceName.js  iosDeviceName.js  selectors.js  types.js
coverage-tests/test/: __init__.py  browsers.py  conftest.py  devices.py  pytest.ini  sauce.py  util.py
docs/: eyes_robotframework_docs.html
docs/eyes_robotframework/: configuration.md  keywords.html
eyes_common/: LICENSE  README.rst  setup.cfg  setup.py
eyes_core/: LICENSE  README.rst  setup.py
eyes_images/: README.rst  setup.py
eyes_robot/: README.rst  setup.py
eyes_robot/docs/: index.html
eyes_robotframework/: README.rst  setup.cfg  setup.py
eyes_robotframework/docs/: index.html
eyes_robotframework/src/EyesLibrary/: __init__.py  __main__.py  __version__.py  applitools.yaml  base.py  config.py  config_parser.py  custom_types.py  eyes.py  eyes_cache.py  keywords_list.py  library_listener.py  locator_converter.py  utils.py
eyes_robotframework/src/EyesLibrary/keywords/: __init__.py  check.py  check_settings.py  config.py  keyword_tags.py  session.py  target.py  target_path.py
eyes_robotframework/tests/acceptance/: web.robot
eyes_robotframework/tests/acceptance/resources/: common.robot  config_eyes.robot
eyes_robotframework/tests/acceptance/test_suite_dir/: suite1.robot
eyes_selenium/: CHANGELOG.md  README.rst  package-lock.json  package.json  setup.cfg  setup.py
eyes_selenium/applitools/: common.py  errors.py  eyes.py  geometry.py  logger.py  target.py  utils.py
eyes_selenium/applitools/common/: __init__.py  app_output.py  config.py  errors.py  geometry.py  logger.py  metadata.py  server.py  test_results.py  validators.py  visual_grid.py
eyes_selenium/applitools/common/selenium/: config.py  misc.py
eyes_selenium/applitools/common/ultrafastgrid/: config.py  render_browser_info.py  render_request.py
eyes_selenium/applitools/common/utils/: __init__.py  argument_guard.py  compat.py  converters.py  custom_types.py  datetime_utils.py  general_utils.py  image_utils.py  json_utils.py  url_utils.py
eyes_selenium/applitools/core/: __init__.py  __version__.py  batch_close.py  cut.py  extract_text.py  eyes_base.py  eyes_mixins.py  feature.py  locators.py  match_window_task.py  server_connector.py  test_eyes.py
eyes_selenium/applitools/core/fluent/: __init__.py  check_settings.py  check_target.py  region.py
eyes_selenium/applitools/core/positioning/: position_provider.py
eyes_selenium/applitools/eyes_selenium/: eyes.py  eyes_selenium_utils.py  positioning.py  target.py  webdriver.py  webelement.py
eyes_selenium/applitools/eyes_selenium/capture/: dom_capture.py  eyes_webdriver_screenshot.py
eyes_selenium/applitools/images/: __version__.py  extract_text.py  eyes.py  fluent.py
eyes_selenium/applitools/selenium/: __init__.py  __version__.py  classic_runner.py  command_executor.py  config.py  configuration.py  connection.py  css_parser.py  errors.py  extract_text.py  eyes.py  eyes_selenium_utils.py  frames.py  locators.py  parsers.py  positioning.py  region_compensation.py  rendering.py  resource.py  runner.py  sdk_server.py  selenium_eyes.py  server.py  target.py  text_regions.py  universal_sdk_types.py  useragent.py  validators.py  viewport_locator.py  webdriver.py  webdriver_sync.py  webelement.py
eyes_selenium/applitools/selenium/_core_backup/: __init__.py  capture.py
eyes_selenium/applitools/selenium/capture/: __init__.py  dom_capture.py  eyes_webdriver_screenshot.py  full_page_capture_algorithm.py  image_providers.py  screenshot_utils.py
eyes_selenium/applitools/selenium/extract_text/: __init__.py  extract_text_provider.py  ocr_region.py
eyes_selenium/applitools/selenium/fluent/: __init__.py  region.py  selector.py  selenium_check_settings.py  target.py  target_path.py
eyes_selenium/applitools/selenium/resources/: captureDom.js  captureDomAndPoll.js  captureDomAndPollForIE.js  processPage.js  processPageAndPoll.js  processPageAndSerialize.js  processPageAndSerializePoll.js  processPageAndSerializePollForIE.js
eyes_selenium/applitools/selenium/visual_grid/: __init__.py  dom_snapshot_script.py  eyes_connector.py  helpers.py  render_task.py  rendreing_service.py  resource_cache.py  resource_collection_task.py  running_test.py  vg_task.py  visual_grid_eyes.py  visual_grid_runner.py
eyes_server/: buildall.sh  setup.cfg
eyes_server/applitools/eyes_server/: __init__.py  __main__.py  instance.py  server.py
eyes_universal/: Makefile  README.rst  build_wheels.sh  buildall.sh  setup.cfg  setup.py
eyes_universal/applitools/eyes_universal/: __init__.py  server.py
python/: .editorconfig  requirements-test.txt
python/ci_scripts/: testCoverageGap.txt
python/coverage-tests/: package-lock.json  package.json  python_tests.sh
python/eyes_robotframework/: setup.py
python/eyes_selenium/: README.rst  setup.cfg  setup.py
python/eyes_universal/: README.rst  setup.cfg
python/tutorials/: build.sh
stubs/eyes_common/: setup.cfg
stubs/eyes_core/: setup.cfg
tests/: common_fixtures.py  conftest.py  pytest.ini  pytest_reporting.py  test_installation.py  test_integration.py  test_ufg_native_e2e.py  test_viewports.py  utils.py
tests/eyes_images/: conftest.py  test_functional.py
tests/eyes_selenium/: conftest.py  test_appium.py  (+5 more)
tutorials/: report.sh  tutorials.sh
(+416 files in other folders)
