[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
known_third_party = ["PIL", "appium", "applitools", "attr", "common_fixtures", "invoke", "mock", "pytest", "requests", "selenium", "setuptools", "tinycss2", "transitions", "ua_parser", "webdriver_manager"]
known_first_party = "applitools"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
