[bumpversion]
current_version = 5.6.1
commit = True
tag = False
message = Bump eyes_robotframework version: {current_version} → {new_version}

[bumpversion:file:CHANGELOG.md]
search = [vNext]
replace = [{new_version}] - {now:%%Y-%%m-%%d}

[bumpversion:file:src/EyesLibrary/__version__.py]

[metadata]
name = eyes-robotframework
description = Applitools Python SDK. Robot Framework package
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = file: README.rst
platforms = Linux, MacOS, Windows
keywords = applitools, robotframework, eyes, eyes_selenium, selenium, appium
classifiers =
	Development Status :: 4 - Beta
	Framework :: Robot Framework :: Library
	Intended Audience :: Developers
	Programming Language :: Python
	Topic :: Software Development :: Quality Assurance
	Topic :: Software Development :: Testing
project_urls =
	Bug Reports = https://github.com/applitools/eyes.sdk.python/issues
	Source = https://github.com/applitools/eyes.sdk.python/tree/master/eyes_robotframework

[options]
packages = find:
package_dir =
	= src
install_requires =
	PyYAML>=5,<6
	eyes_selenium>=5,<6
	robotframework-appiumlibrary>=1.5,<1.6      ;python_version<'3.0'
	robotframework-appiumlibrary>=1.6           ;python_version>='3.0'
	robotframework-pythonlibcore>=2.0.2,<3.0    ;python_version<'3.0'
	robotframework-pythonlibcore>=3.0           ;python_version>='3.0'
	robotframework-seleniumlibrary>=3.3.1,<4.5  ;python_version<'3.0'
	robotframework-seleniumlibrary>=4.5         ;python_version>='3.0'
	robotframework>=3.2.2,<4.0                  ;python_version<'3.0'
	robotframework>=4.0                         ;python_version>='3.0'
	trafaret==2.1.0
	yamllint<=1.25.0                            ;python_version<'3.0'
	yamllint>1.25.0,<2.0                        ;python_version>='3.0'
python_requires = >=2.7, <4

[options.packages.find]
where = src

[options.package_data]
* = py.typed, applitools.yaml
