[metadata]
name = eyes_selenium
description = Applitools Python SDK. Selenium package
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = file: README.rst
keywords = applitools, eyes, eyes_selenium
classifiers =
    Programming Language :: Python
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
    Appium-Python-Client>=0.4,<2    ;python_version>='3.0'
    Pillow >= 5.0.0,<7.0.0          ;python_version<'3.0'
    Pillow >= 5.0.0                 ;python_version>='3.0'
    attrs>=19.2.0,<23
    brotli>=1.0.9                   ;python_version>='3.0' or platform_system!='Windows'
    brotlipy==0.7.0                 ;python_version<'3.0' and platform_system=='Windows'
    cattrs<1.1.0                    ;python_version>='3.0' and python_version<'3.7'
    cattrs<=1.0.0                   ;python_version<'3.0'
    cattrs>=1.1.0                   ;python_version>'3.7'
    enum34==1.1.6                   ;python_version<'3.4'
    eyes-server==0.2.0
    futures==3.2.0                  ;python_version<'3.0'
    lxml>=4.4,<5
    requests>=2.22.0
    structlog<=20.1.0
    tinycss2==0.6.1                 ;python_version<'3.0'
    tinycss2>=0.6.1,<1.1.0          ;python_version>='3.0'
    transitions>=0.6,<=0.8.3
    typing>=3.5.2                   ;python_version<'3.5'
    ua_parser==0.10.0
    urllib3>=1.25.10
    websocket-client<=0.59
