[metadata]
name = eyes_selenium
description = Applitools Python SDK. Selenium package
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = file: README.rst
keywords = applitools, eyes, eyes_selenium
classifiers =
    Programming Language :: Python
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
    Appium-Python-Client>=0.4,<2    ;python_version>='3.0'
    attrs>=19.2.0,<23
    cattrs<1.1.0                    ;python_version>='3.0' and python_version<'3.7'
    cattrs<=1.0.0                   ;python_version<'3.0'
    cattrs>=1.1.0                   ;python_version>'3.7'
    enum34==1.1.6                   ;python_version<'3.4'
    eyes-universal==0.2.0
    futures==3.2.0                  ;python_version<'3.0'
    six
    structlog<=20.1.0
    typing>=3.5.2                   ;python_version<'3.5'
    websocket-client<=0.59

[options.package_data]
* = py.typed
