[metadata]
name = eyes_selenium
description = Applitools Python SDK. Selenium package
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = file: README.rst
platforms = Linux, MacOS, Windows
keywords = applitools, eyes, eyes_selenium
classifiers =
    Programming Language :: Python
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    Appium-Python-Client>=0.4,<1.0.0;python_version<'3.0'
    Appium-Python-Client<2          ;python_version>='3.0' and python_version<'3.7'
    Appium-Python-Client<3          ;python_version>='3.7'
    attrs>=19.2.0,<23
    cattrs<=1.0.0                   ;python_version<'3.0'
    cattrs<1.1.0                    ;python_version>='3.0' and python_version<'3.7'
    cattrs>=1.1.0,<1.2              ;python_version>='3.7'
    enum34==1.1.6                   ;python_version<'3.4'
    eyes-common==5.0.0
    eyes-core==5.0.0
    eyes-universal>=2.1.3,<3
    futures==3.2.0                  ;python_version<'3.0'
    selenium<5
    six
    typing>=3.5.2                   ;python_version<'3.5'
    websocket-client<=0.59
python_requires = >=2.7, <4

[options.package_data]
* = py.typed
