[metadata]
name = eyes-server
description = Applitools Eyes Universal SDK Server
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
version = attr: applitools.eyes_server.__version__
long_description = file: README.rst

[options]
packages = find:
zip_safe = False

[bdist_wheel]
universal = True
