[metadata]
name = eyes-universal
description = Applitools Eyes Universal SDK Server
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
project_urls =
    Bug Reports=https://github.com/applitools/eyes.sdk.python/issues
    Source=https://github.com/applitools/eyes.sdk.python/tree/master/eyes_universal
version = attr: applitools.eyes_universal.__version__
long_description = file: README.rst
platforms = Linux, MacOS, Windows
classifiers =
    Programming Language :: Python
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
packages = find:
zip_safe = False

[options.package_data]
* = bin/*

[bdist_wheel]
universal = True
