[metadata]
name = eyes_common
version = 4.0.0
description = Applitools Python SDK. Core package stub
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = This is an empty package needed to correctly upgrade eyes-selenium package
platforms = Linux, MacOS, Windows

[options]
install_requires = eyes-common==4
zip_safe = True

[bdist_wheel]
universal = True
