[metadata]
name = eyes_common
version = 5.0.0
description = Applitools Python SDK common package stub
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = This is a stub package needed to correctly upgrade eyes-selenium package
platforms = Linux, MacOS, Windows

[options]
install_requires = eyes_core==5.0.0
zip_safe = True

[bdist_wheel]
universal = True
