[metadata]
name = eyes_common
version = 5.0.0
description = Applitools Python SDK common package stub
author = Applitools Team
author_email = team@applitools.com
url = http://www.applitools.com
long_description = This is a stub package needed to correctly upgrade eyes-selenium package
platforms = Linux, MacOS, Windows

[options]
zip_safe = True

[bdist_wheel]
universal = True
